11/22 新增CP、LP、sitemap、404，mp異動

--- a/mp.html
+++ b/mp.html
@@ -23,7 +23,7 @@
 
 <body>
     <!-- wrapper Start -->
-    <div class="wrapper">
+    <div class="wrapper mp">
         <div class='key_visual'>
             <div class="container">
                 <!-- header Start -->
