--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
             /*border: solid 1px #222;*/
         }
         table td{
-            padding: .5em 0;
+            padding: .5em;
             border-bottom: solid 1px #e2e2e2;
         }
         table th{
@@ -79,8 +79,8 @@
         <h1><img src="images/logo2.png" alt=""></h1>
         <!-- <div class="btn_grp">
             <a href="#" class="btn">切版檔案請按此下載</a>
-        </div> -->
-        <hr>
+        </div>
+        <hr> -->
         <div class="table_wrapper">
             <!-- hyUI 標準頁面 -->
             <table>
@@ -98,56 +98,56 @@
                         <!-- 連結放到a裡面就好 -->
                         <td><a href="mp.html"></a></td>
                     </tr>
-                    <!-- <tr>
+                    <tr>
                         <td></td>
                         <td>列表頁</td>
-                        <td><a href="lp_template.htm"></a></td>
+                        <td><a href="lp.html"></a></td>
                     </tr>
                     <tr>
                         <td></td>
                         <td>列表頁-表格</td>
-                        <td><a href="lp_table_template.htm"></a></td>
+                        <td><a href="lp_table.html"></a></td>
                     </tr>
                     <tr>
                         <td></td>
                         <td>列表頁-相簿</td>
-                        <td><a href="lp_album_template.htm"></a></td>
+                        <td><a href="lp_album.html"></a></td>
                     </tr>
                     <tr>
                         <td></td>
                         <td>內容頁</td>
-                        <td><a href="cp_template.htm"></a></td>
+                        <td><a href="cp.html"></a></td>
                     </tr>
                      <tr>
                         <td></td>
                         <td>內容頁-照片</td>
-                        <td><a href="cp_photo_template.htm"></a></td>
+                        <td><a href="cp_photo.html"></a></td>
                     </tr>
-                    <tr>
+                    <!-- <tr>
                         <td></td>
                         <td>節點頁</td>
                         <td><a href="np_template.htm"></a></td>
-                    </tr>
-                    <tr>
+                    </tr> -->
+                    <!-- <tr>
                         <td></td>
                         <td>轉寄友人</td>
                         <td><a href="fp_template.htm"></a></td>
-                    </tr>
-                    <tr>
+                    </tr> -->
+                    <!-- <tr>
                         <td></td>
                         <td>意見信箱</td>
                         <td><a href="qp_template.htm"></a></td>
-                    </tr>
+                    </tr> -->
                     <tr>
                         <td></td>
                         <td>網站地圖</td>
-                        <td><a href="sitemap_template.htm"></a></td>
+                        <td><a href="sitemap.html"></a></td>
                     </tr>
                      <tr>
                         <td></td>
                         <td>404 網站錯誤</td>
-                        <td><a href="404.htm"></a></td>
-                    </tr> -->
+                        <td><a href="404.html"></a></td>
+                    </tr>
                 </tbody>
             </table>
             <!-- 專案客製化頁面 -->
