2020/01/07 調整 1、search 需求時間 input 2、最新消息titel寬度 3、課程欄位數 4、內頁標題過長，function位置調整

--- a/cp.html
+++ b/cp.html
@@ -109,7 +109,7 @@
                         <li>節點</li>
                     </ul>
                 </div>
-                <h2 class="title">要套文章標題</h2>
+                <h2 class="title">要套文章標題要套文章標題要套文章標題要套文章標題要套文章標題要套文章標題要套文章標題要套文章標題要套文章標題要套文章標題要套文章標題要套文章標題</h2>
                 <!-- function功能區塊 -->
                 <div class="function">
                     <ul>
