--- a/mp.html
+++ b/mp.html
@@ -158,12 +158,13 @@
                                 </div>
                                 <div class="form_grp">
                                     <label for="selectSample">需求時間</label>
-                                    <select name="" id="selectSample">
+                                    <input type="text">
+                                    <!-- <select name="" id="selectSample">
                                         <option value="">2019-01-01</option>
                                         <option value="">2019-01-02</option>
                                         <option value="">2019-01-03</option>
                                         <option value="">2019-01-04</option>
-                                    </select>
+                                    </select> -->
                                 </div>
                                 <button type="button" class="btn btn-go">找通譯</button>
                             </form>
@@ -296,20 +297,16 @@
                             <div class="img-container"><img src="images/bg-course-1.jpg" alt="" class="lazy cover"></div>
                         </a>
                     </div>
-                    <div class="col mix">
+                    <div class="col">
                         <a href="#">
                             <p>108年度臺北市新移民會館外語通譯人員招募培訓公告</p>
                             <div class="img-container"><img src="images/bg-course-2.jpg" alt="" class="lazy cover"></div>
-                        </a>
-                        <a href="#">
-                            <p>108年度臺北市新移民會館外語通譯人員招募培訓公告</p>
-                            <div class="img-container"><img src="images/bg-course-3.jpg" alt="" class="lazy cover"></div>
                         </a>
                     </div>
                     <div class="col">
                         <a href="#">
                             <p>108年度臺北市新移民會館外語通譯人員招募培訓公告</p>
-                            <div class="img-container"><img src="images/bg-course-4.jpg" alt="" class="lazy cover"></div>
+                            <div class="img-container"><img src="images/bg-course-3.jpg" alt="" class="lazy cover"></div>
                         </a>
                     </div>
                 </div>
