--- a/index.html
+++ b/index.html
@@ -151,7 +151,7 @@
                 </tbody>
             </table>
             <!-- 專案客製化頁面 -->
-            <!-- <table>
+            <table>
                 <thead>
                     <tr>
                         <th class="num">編號</th>
@@ -162,22 +162,22 @@
                 <tbody>
                     <tr>
                         <td></td>
-                        <td>電子報</td>
-                        <td><a href="epaper_template.htm"></a></td>
+                        <td>英文首頁</td>
+                        <!-- 連結放到a裡面就好 -->
+                        <td><a href="mp_en.html"></a></td>
                     </tr>
-                     <tr>
+                    <!-- <tr>
                         <td></td>
                         <td>...</td>
                         <td><a href="..."></a></td>
                     </tr>
-                     <tr>
+                    <tr>
                         <td></td>
                         <td>...</td>
                         <td><a href="..."></a></td>
-                    </tr>
-                  
+                    </tr> -->
                 </tbody>
-            </table> -->
+            </table>
         </div>
     </div>
     <a href="javascript:;" class="scrollToTop" >回頁首</a>
